fix layout bugs

--- a/src/elements/pages/overview-planing/check-list/check-list.scss
+++ b/src/elements/pages/overview-planing/check-list/check-list.scss
@@ -18,15 +18,34 @@
         font-weight: 500;
     }
 
+    .required-item {
+        height: 7px;
+        width: 7px;
+        margin-top: -.5em;
+        color: red;
+    }
+
+    .selected-methods-column {
+
+    }
+
     .method-column {
         margin: 0 7px;
     }
     .method-check-column {
-        width: 30px;
+        min-width: 20px;
+        min-height: 20px;
+        width: 20px;
+        height: 20px;
+        margin: 5px;
     }
 
     .col-data .bold-text {
         font-weight: 500;
+    }
+
+    .col-data .view-partnerships {
+        margin-left: 15px;
     }
 
     .col-data .not-selected-method {
@@ -131,6 +150,10 @@
                 font-weight: 500;
             }
         }
+    }
+
+    .editable-row .hover-block iron-icon {
+        padding-left: 12px;
     }
 
     etools-dialog .container {
